Store contact form emails via extra queue into Azure blob storage.

--- a/Eric.Jansen.Client/EmailTemplateSamples/en-us/contact/settings.json
+++ b/Eric.Jansen.Client/EmailTemplateSamples/en-us/contact/settings.json
@@ -1,29 +1,17 @@
 {
+  "CultureName": "en-us",
   "TemplateName": "contact",
-  "Emails": [
+  "EmailSettings": [
     {
       "RecipientType": "admin",
       "Email": {
-        "Subject": "Your request to Eric Jansen.",
+        "Subject": "Sample - Admin",
         "Tos": [
           {
             "Address": "mail@ericjansen.com",
             "Name": "Eric Jansen"
           }
         ]
-      }
-    },
-    {
-      "RecipientType": "user",
-      "Email": {
-        "Subject": "Your request to Eric Jansen.",
-        "Tos": [
-          {
-            "Address": "mail@ericjansen.com",
-            "Name": "Eric Jansen"
-          }
-        ]
-
       }
     }
   ]
