--- a/Eric.Jansen.Infrastructure/Eric.Jansen.Infrastructure.csproj
+++ b/Eric.Jansen.Infrastructure/Eric.Jansen.Infrastructure.csproj
@@ -10,11 +10,15 @@
 		<PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.1" />
 		<PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
 		<PackageReference Include="Azure.Storage.Queues" Version="12.17.1" />
-		<PackageReference Include="Ekzakt.EmailSender.Smtp" Version="0.2.3" />
-		<PackageReference Include="Ekzakt.EmailTemplateProvider.Io" Version="0.0.14" />
-		<PackageReference Include="Ekzakt.FileManager.AzureBlob" Version="0.0.34" />
-		<PackageReference Include="Ekzakt.Utilities" Version="0.2.17" />
+		<PackageReference Include="Ekzakt.EmailSender.Smtp" Version="0.2.7" />
+		<PackageReference Include="Ekzakt.EmailTemplateProvider.Io" Version="0.1.26" />
+		<PackageReference Include="Ekzakt.FileManager.AzureBlob" Version="0.0.37" />
+		<PackageReference Include="Ekzakt.Utilities" Version="0.2.22" />
 		<PackageReference Include="Microsoft.Extensions.Azure" Version="1.7.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Eric.Jansen.Application\Eric.Jansen.Application.csproj" />
 	</ItemGroup>
 	
 </Project>
