--- a/Eric.Jansen.Client/appsettings.json
+++ b/Eric.Jansen.Client/appsettings.json
@@ -6,10 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "AppSettingsOrigin": "Production_AppSettings",
-  "Ekzakt": {
-    "SmtpEmail": {
-      "SenderDisplayName": "Eric Jansen Web"
-    }
-  }
+  "AppSettingsOrigin": "Production_AppSettings"
 }
