Included Tenant.HostName into contact form email.

--- a/Eric.Jansen.Client/EmailTemplateSamples/en-us/contact/settings.json
+++ b/Eric.Jansen.Client/EmailTemplateSamples/en-us/contact/settings.json
@@ -5,7 +5,7 @@
     {
       "RecipientType": "admin",
       "Email": {
-        "Subject": "[ContactForm] ericjansen.com by {{ContactName}}",
+        "Subject": "[ContactForm] {{TenantHostName}} by {{ContactName}}",
         "Tos": [
           {
             "Address": "mail@ericjansen.com",
