Added OpenTelemetry services, only for production environment.

--- a/Eric.Jansen.Client/appsettings.Staging.json
+++ b/Eric.Jansen.Client/appsettings.Staging.json
@@ -5,10 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Ekzakt": {
-    "SmtpEmail": {
-      "SenderDisplayName": "Eric Jansen Web"
-    }
-  }
+  "AllowedHosts": "*"
 }
