Fixed issue with navigation bar.

--- a/Ej.Client/compilerconfig.json
+++ b/Ej.Client/compilerconfig.json
@@ -1,6 +1,8 @@
-﻿[
+[
   {
     "outputFile": "wwwroot/css/ericjansen.css",
-    "inputFile": "wwwroot/css/ericjansen.scss"
+    "inputFile": "wwwroot/css/ericjansen.scss",
+    "sourceMap": false,
+    "useNodeSass": false
   }
 ]
