Added globalization functionality.

--- a/Ej.Client/Ej.Client.csproj
+++ b/Ej.Client/Ej.Client.csproj
@@ -30,4 +30,12 @@
     <ProjectReference Include="..\Ej.Infrastructure\Ej.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="EmailTemplateSamples\en-us\contact\settings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
