Added localization options to appsettings.

--- a/Ej.Client/appsettings.Development.json
+++ b/Ej.Client/appsettings.Development.json
@@ -12,6 +12,13 @@
   },
   "AllowedHosts": "*",
   "EricJansen": {
+    "Localization": {
+      "DefaultCulture": "en-us",
+      "SupportedCultures": [
+        "en-us",
+        "nl-be"
+      ]
+    },
     "QueueNames": {
       "ContactForm": "contactformrequests",
       "Emails": "emails"
