--- a/Ej.Application/Ej.Application.csproj
+++ b/Ej.Application/Ej.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ekzakt.Utilities" Version="0.2.25" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
   </ItemGroup>
 
