--- a/Ej.Client/Ej.Client.csproj
+++ b/Ej.Client/Ej.Client.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<UserSecretsId>6325962e-7c34-4879-a4b7-02f5a1e55183</UserSecretsId>
 	</PropertyGroup>
 
 	<ItemGroup>
