Corrected content in WaardenboomValues.

--- a/Ej.Client/Ej.Client.csproj
+++ b/Ej.Client/Ej.Client.csproj
@@ -43,6 +43,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\karus\Data\Balansgroep\" />
+    <Folder Include="wwwroot\karus\Data\CirkelVanVerandering\" />
   </ItemGroup>
 
 </Project>
