--- a/Ej.Infrastructure/Ej.Infrastructure.csproj
+++ b/Ej.Infrastructure/Ej.Infrastructure.csproj
@@ -8,13 +8,14 @@
 
 	<ItemGroup>
 		<PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.2" />
-		<PackageReference Include="Azure.Storage.Blobs" Version="12.21.2" />
-		<PackageReference Include="Azure.Storage.Queues" Version="12.19.1" />
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
+		<PackageReference Include="Azure.Storage.Queues" Version="12.21.0" />
 		<PackageReference Include="Ekzakt.EmailSender.Smtp" Version="0.2.10" />
 		<PackageReference Include="Ekzakt.EmailTemplateProvider.Io" Version="0.1.34" />
 		<PackageReference Include="Ekzakt.FileManager.AzureBlob" Version="0.1.6" />
 		<PackageReference Include="Ekzakt.Utilities" Version="0.2.25" />
-		<PackageReference Include="Microsoft.Extensions.Azure" Version="1.7.5" />
+		<PackageReference Include="Microsoft.Extensions.Azure" Version="1.9.0" />
+		<PackageReference Include="System.Text.Json" Version="9.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
