--- a/Ej.Client/Ej.Client.csproj
+++ b/Ej.Client/Ej.Client.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Karus\Shared\" />
     <Folder Include="wwwroot\karus\Data\CirkelVanVerandering\" />
   </ItemGroup>
 
