Update Karus emergency contacts styling.

--- a/Ej.Client/Ej.Client.csproj
+++ b/Ej.Client/Ej.Client.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Folder Include="Views\Karus\Shared\" />
     <Folder Include="wwwroot\karus\Data\CirkelVanVerandering\" />
+    <Folder Include="wwwroot\karus\Assets\" />
   </ItemGroup>
 
 </Project>
