Created separate layout for Karus.

--- a/Ej.Client/compilerconfig.json
+++ b/Ej.Client/compilerconfig.json
@@ -26,5 +26,9 @@
     "minify": {
       "enabled": true
     }
+  },
+  {
+    "outputFile": "wwwroot/js/karus.moneycounter.es5.js",
+    "inputFile": "wwwroot/js/karus.moneycounter.js"
   }
 ]
