Refactored Karus Crisisbox EmergencyContacts.

--- a/Ej.Client/Ej.Client.csproj
+++ b/Ej.Client/Ej.Client.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\karus\Crisisbox\" />
     <Folder Include="wwwroot\karus\Data\CirkelVanVerandering\" />
     <Folder Include="wwwroot\karus\Assets\" />
   </ItemGroup>
